<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/capture_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_title_capture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/front"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/ttv_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_weight="5">

            <TextureView
                android:id="@+id/textureView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_mark_3" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/capture"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_16sdp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/display_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_title_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/front_identity_card"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imv_identification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:text="@string/capture_back_side"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_capture_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:text="@string/capture_again"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>