<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity"
    android:padding="@dimen/_8sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/list_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_processing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:clickable="true"
                    android:text="@string/prcessed"
                    android:focusable="true" />
                <View
                    android:id="@+id/v_processing"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:background="@color/colorBackGroundButton"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_processed"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:clickable="true"
                    android:text="@string/processing"
                    android:focusable="true" />
                <View
                    android:id="@+id/v_processed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"
                    android:visibility="invisible"
                    android:background="@color/colorBackGroundButton"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv_list"
            android:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_add"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:id="@+id/detail_layout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_GTCN_type_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/GTCN_type_text" />

                <EditText
                    android:id="@+id/edt_GTCN_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_GTCN_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/GTCN_number_text" />


                <EditText
                    android:id="@+id/edt_GTCN_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_name_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/name_text" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_birthday_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/birthday_text" />

                <EditText
                    android:id="@+id/edt_birthday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_gender_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/gender_text" />


                <EditText
                    android:id="@+id/edt_gender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_native_place_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/native_place_text" />


                <EditText
                    android:id="@+id/edt_native_place"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_dated_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/dated_text" />

                <EditText
                    android:id="@+id/edt_dated"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_place_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center|start"
                    android:text="@string/place_text" />


                <EditText
                    android:id="@+id/edt_place"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imv_front_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:src="@tools:sample/avatars" />
            <ImageView
                android:id="@+id/imv_backside_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:src="@tools:sample/avatars" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/edit"/>

        <Button
            android:visibility="gone"
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/done"/>
    </LinearLayout>
</LinearLayout>